--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font-size: 18px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bold;
-  font-style: italic;
+  font-style: italic
 }
 .tabs {
   display: flex;
