--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ html,
 body {
   font-size: 18px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
 }
 
 .tabs {
