--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ html,
 body {
   font-size: 18px;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: bold
-  ;
+  font-weight: bold;
 }
 
 .tabs {
