--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,
 body {
   font-size: 18px;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-family: 'Courier New', Courier, monospace
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .tabs {
